fixed z-index

--- a/sass/wp-adjustments.scss
+++ b/sass/wp-adjustments.scss
@@ -5,3 +5,7 @@
     backdrop-filter: blur(60px);
   }
 }
+.wp-block-columns {
+  position: relative;
+  z-index: 2;
+}
